syntax = "proto3";

package com.spotify.canvazcache;

option optimize_for = CODE_SIZE;
option java_package = "com.spotify.canvaz";

enum Type {
    IMAGE = 0;
    VIDEO = 1;
    VIDEO_LOOPING = 2;
    VIDEO_LOOPING_RANDOM = 3;
    GIF = 4;
}

message Artist {
    string uri = 1;
    string name = 2;
    string avatar = 3;
}

message CanvasResponse {
    repeated Canvas canvases = 1;
    message Canvas {
        string id = 1;
        string url = 2;
        string fileID = 3;
        Type type = 4;
        string trackURI = 5;
        Artist artist = 6;
        bool explicit = 7;
        string uploadedBy = 8;
        string etag = 9;
        string canvasURI = 11;
        string storylinesID = 12;
    }
    int64 ttl_in_seconds = 2;
}

message CanvasRequest {
    repeated Track tracks = 1;
    message Track {
        string track_uri = 1;
        string etag = 2;
    }
}
